--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "pushprisma": "npx prisma db push",
     "postinstall": "prisma generate"
   },
   "dependencies": {
